# Turtlesim---Catch-them-all

./: .gitignore  README.md
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: parameters.yaml
src/bringup/launch/: turtlesim_launch.xml
src/catch_them_all/: package.xml  setup.cfg  setup.py
src/catch_them_all/catch_them_all/: turtle_controller.py  turtle_spawner.py
src/interfaces/: CMakeLists.txt  package.xml
